Updated files for first release beta release 1.0.1

--- a/plugins/SeanTheme/webroot/css/style.css
+++ b/plugins/SeanTheme/webroot/css/style.css
@@ -6819,3 +6819,10 @@ body .bootstrap-datetimepicker-widget table td {
 .form-group.has-success .fileinput .thumbnail {
     border-color: #b8df92;
 }
+.required > label {
+    font-weight: bold;
+}
+.required > label:after {
+    content: ' *';
+    color: #C3232D;
+}
