--- a/plugins/SeanTheme/webroot/css/print.css
+++ b/plugins/SeanTheme/webroot/css/print.css
@@ -7,6 +7,25 @@
     }
     @page {
         margin: 0.5cm;
+        size: A4 portrait;
+    }
+    .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9 {
+        float: left;
+    }
+    .col-sm-10 {
+        width: 83.33333333%;
+    }
+    .col-sm-2 {
+        width: 16.66666667%;
+    }
+    .col-sm-6 {
+        width: 50%;
+    }
+    .col-sm-9 {
+        width: 75%;
+    }
+    .col-sm-3 {
+        width: 25%;
     }
     .btn {
         display: none;
