correct issues in the result print.css

--- a/plugins/SeanTheme/webroot/css/print.css
+++ b/plugins/SeanTheme/webroot/css/print.css
@@ -27,6 +27,9 @@
     .col-sm-3 {
         width: 25%;
     }
+    .col-sm-12 {
+        width: 100%;
+    }
     .btn {
         display: none;
     }
